# rhema

.github/workflows/: build-windows.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/crates/detection/src/: reading_mode.rs
src-tauri/crates/propresenter/: Cargo.toml
src-tauri/crates/propresenter/src/: client.rs  lib.rs  types.rs
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: mod.rs  propresenter.rs  stt.rs
src/components/: settings-dialog.tsx
src/components/layout/: dashboard.tsx
src/components/panels/: propresenter-panel.tsx
src/components/settings/: propresenter-settings.tsx  song-library-settings.tsx
src/components/tutorial/: tutorial-overlay.tsx  tutorial-steps.ts
src/hooks/: use-propresenter.ts
src/lib/: propresenter-ws.ts  settings-dialog.ts  song-library-db.ts
src/stores/: propresenter-store.ts  settings-store.ts  song-library-store.ts
