[package]
name = "rhema-propresenter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"
url = "2"

[lints]
workspace = true
