[package]
name = "rhema-propresenter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
futures-util = "0.3"

[lints]
workspace = true
